--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   },
   "devDependencies": {
     "code": "4.x.x",
-    "joi": "^9.2.0",
+    "joi": "10.x.x",
     "lab": "11.x.x",
     "markdown-toc": "0.13.x"
   },
