--- a/package.json
+++ b/package.json
@@ -25,15 +25,15 @@
   },
   "devDependencies": {
     "code": "4.x.x",
+    "hapitoc": "1.x.x",
     "joi": "10.x.x",
-    "lab": "12.x.x",
-    "markdown-toc": "1.1.x"
+    "lab": "13.x.x"
   },
   "scripts": {
     "test": "lab -t 100 -a code -L",
     "test-debug": "node $NODE_DEBUG_OPTION ./node_modules/.bin/lab -a code",
     "test-cov-html": "lab -r html -o coverage.html -a code",
-    "toc": "node generate-readme-toc.js",
+    "toc": "hapitoc",
     "version": "npm run toc && git add API.md README.md"
   },
   "license": "BSD-3-Clause"
