--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "lab": "14.x.x"
   },
   "scripts": {
-    "test": "lab -t 100 -a code -L -I 'URL,URLSearchParams,BigUint64Array,BigInt64Array,BigInt'",
+    "test": "lab -t 100 -a code -L -I 'URL,URLSearchParams,BigUint64Array,BigInt64Array,BigInt,TextEncoder,TextDecoder,queueMicrotask'",
     "test-debug": "node $NODE_DEBUG_OPTION ./node_modules/.bin/lab -a code",
     "test-cov-html": "lab -r html -o coverage.html -a code",
     "toc": "hapitoc",
