Update deps. Closes #17

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,17 @@
 language: node_js
 
 node_js:
-  - "4"
-  - "6"
   - "8"
   - "10"
+  - "11"
   - "node"
 
 sudo: false
+
+install:
+  - "npm install"
+
+os:
+  - "linux"
+  - "osx"
+  - "windows"
