--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,13 @@
-.c9
-.idea
-.vscode
-.project
-*.iml
-npm-debug.log
-dump.rdb
-node_modules
-yarn.lock
-yarn-error.log
-results.tap
-results.xml
-npm-shrinkwrap.json
-config.json
-.DS_Store
-*/.DS_Store
-*/*/.DS_Store
-._*
-*/._*
-*/*/._*
+**/node_modules
+**/package-lock.json
+
 coverage.*
-lib-cov
-complexity.md
-sandbox.js
+
+**/.DS_Store
+**/._*
+
+**/*.pem
+
+**/.vs
+**/.vscode
+**/.idea
