--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@hapi/joi-date",
   "description": "Joi extension for dates",
-  "version": "2.0.0-preview",
+  "version": "2.0.0",
   "repository": "git://github.com/hapijs/joi-date",
   "main": "lib/index.js",
   "keywords": [
@@ -17,7 +17,7 @@
   },
   "devDependencies": {
     "@hapi/code": "6.x.x",
-    "@hapi/joi": "16.0.0-preview",
+    "@hapi/joi": "16.x.x",
     "@hapi/lab": "20.x.x"
   },
   "scripts": {
