--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   },
   "devDependencies": {
     "@hapi/code": "6.x.x",
-    "@hapi/joi": "16.x.x",
+    "@hapi/joi": ^16.1.7",
     "@hapi/lab": "20.x.x"
   },
   "scripts": {
