--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "@hapi/joi-date",
+  "name": "@sideway/joi-date",
   "description": "Joi extension for dates",
   "version": "2.0.1",
-  "repository": "git://github.com/hapijs/joi-date",
+  "repository": "git://github.com/sideway/joi-date",
   "main": "lib/index.js",
   "keywords": [
     "schema",
