--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "@hapi/joi-date",
+  "name": "@joi/date",
   "description": "Joi extension for dates",
   "version": "2.0.1",
-  "repository": "git://github.com/hapijs/joi-date",
+  "repository": "git://github.com/sideway/joi-date",
   "main": "lib/index.js",
   "keywords": [
     "schema",
@@ -16,9 +16,9 @@
     "moment": "2.x.x"
   },
   "devDependencies": {
-    "@hapi/code": "6.x.x",
-    "@hapi/joi": "^16.1.7",
-    "@hapi/lab": "20.x.x"
+    "@hapi/code": "8.x.x",
+    "@hapi/joi": "17.x.x",
+    "@hapi/lab": "24.x.x"
   },
   "scripts": {
     "test": "lab -t 100 -a @hapi/code -L",
