--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "devDependencies": {
     "@hapi/code": "8.x.x",
     "@hapi/lab": "24.x.x",
+    "@types/node": "^14.18.63",
     "joi": "^17.2.0",
     "typescript": "4.0.x"
   },
